style: Make footer fixed, smaller, and always visible

--- a/src/style.scss
+++ b/src/style.scss
@@ -291,13 +291,13 @@ dialog {
 }
 
 footer {
-    position: sticky;
+    position: fixed;
     bottom: 0;
-    // background-color: var(--color-dark);
-    // color: var(--color-light);
-    padding: 10px;
+    left: 0;
+    width: 100%;
+    padding: 5px;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.6em;
     z-index: 100;
     a {
         color: var(--color-primary);
